--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -17,9 +17,9 @@
     "\n",
     "<center><font color=#555555><font size=5> ITE1731 - Microestructura y Sistemas de Trading </font> <br> <br> <br>\n",
     "\n",
-    "<center><font color=#555555><font size=5> I.F. Nombre Nombre Apellido Apellido </font> <br> <br>\n",
+    "<center><font color=#555555><font size=5> I.F. 709941 Yaquie Guadalupe Contreras Torres </font> <br> <br>\n",
     "   \n",
-    "<center> <font color= #555555> <font size = 4> Septiembre 2020 </a> | <font color= #555555> <font size = 4> Repositorio: <a href='https://github.com/'>Link</a></font>"
+    "<center> <font color= #555555> <font size = 4> Septiembre 2020 </a> | <font color= #555555> <font size = 4> Repositorio: <a href='https://github.com/yaquietorres98/myst_if709941_lab1'>Link</a></font>"
    ]
   },
   {
@@ -68,21 +68,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color= #6B6B6B> <font size = 2> Este documento fue elaborado por tu **nombre completo**, como un trabajo parcial para la materia de **Microestructura y Sistemas de Trading - ITE1731**, la cual es parte del curriculum de la licenciatura en Ingeniería Financiera, ofertada por la universidad **ITESO**. En el presente trabajo se plantea la respuesta a la siguiente pregutna: *¿Qué estrategia de inversión propondrías si tu trabajo fuera administrar 1 Millón de pesos?*</font>"
+    "<font color= #6B6B6B> <font size = 2.5> Este documento fue elaborado por tu Yaquie Guadalupe Contreras Torres, como un trabajo parcial para la materia de Microestructura y Sistemas de Trading - ITE1731, la cual es parte del curriculum de la licenciatura en Ingeniería Financiera, ofertada por la universidad ITESO. En el presente trabajo se plantea la respuesta a la siguiente pregutna:<font size = 3.5> **¿Qué estrategia de inversión propondrías si tu trabajo fuera administrar 1 Millón de pesos?** "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "<br>"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color= #6B6B6B> <font size = 6> 0. Librerías y Dependencias </font>"
+    "# <font color= #blue > <font size = 6> 0. Librerías y Dependencias </font>"
    ]
   },
   {
@@ -96,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color= #6B6B6B> <font size = 5> 0.1 Librerías </font> <font color= #555555>"
+    "# <font color= green> <font size = 5> 0.1 Librerías </font> <font color= #555555>"
    ]
   },
   {
@@ -110,6 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<font color= red> \n",
     "- pandas>=1.1.1 \n",
     "- numpy>=1.19.1\n",
     "- jupyter>=1.0.0\n",
@@ -120,7 +119,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color= #6B6B6B> <font size = 5> 0.2 Dependencias </font> <font color= #555555>"
+    "- Pandas es una biblioteca de software escrita para manipulación y análisis de datos para el lenguaje de programación Python. En particular, ofrece estructuras de datos y operaciones para manipular tablas numéricas y series temporales.\n",
+    "- NumPy es una extensión de Python, que le agrega mayor soporte para vectores y matrices, constituyendo una biblioteca de funciones matemáticas de alto nivel para operar con esos vectores o matrices.\n",
+    "- Jupyter es una organizacion creada para desarrollar software de código abierto, estándares abiertos y servicios para computación interactiva en docenas de lenguajes de programación \n",
+    "- Yfinance tiene como objetivo poder descargar datos historicos de Yahoo! finance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <font color= green> <font size = 5> 0.2 Dependencias </font> <font color= #555555>"
    ]
   },
   {
@@ -149,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color= #6B6B6B> <font size = 6> 1. Introducción </font>"
+    "# <font color= #blue> <font size = 6> 1. Introducción </font>"
    ]
   },
   {
@@ -162,20 +171,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "<br>"
+    "<br><font size = 3.5> Para poder responder esta pregunta tenemos que saber que existen dos posibles opciones a elegir, por un lado la Inversión Activa o Inversión Pasiva.\n",
+    "\n",
+    " * Entndiendo por Inversió Activa que es una estrategia de inversión que implica que el inversor compra y venda acciones por si mismo de manera recurrente. Los inversores activos compran las acciones y le dan seguimiento con el fin de buscar la mayor rentabilidad que el mercado permita, generalmente en el corto plazo. La inversión activa generalmente requiere de mas tiempo y educación que las estrategias de inversión pasivas ya que el seguimiento de a los activos tiene que ser constante. \n",
+    " * Por otro lado, la inversión pasiva (también conocida como gestión pasiva o inversión indexada) se caracteriza por invertir en Bolsa mediante ETFs(Conjunto de acciones, bonos y materias primas que ayudan a invertir de manera diversificada) de bajo coste o fondos indexados. Estos activos replican el comportamiento de cualquier índice bursátil (IBEX-35, S&P500, etc.), y por tanto la rentabilidad obtenida es la del mercado, ni más, ni menos. La inversión pasiva utiliza fondos indexados que te ofrecen la rentabilidad del mercado, que a largo plazo, es muy difícilmente superada por gestores activos.\n",
+    " <br><br>\n",
+    "Para comprender mejor sonbre que estrategia nos conviene o agrada más, agrego una tabla que permite identificar las diferencias entre Inversión Pasiva y la Inversión Activa."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color= #6B6B6B> <font size = 6> 2. Objetivos </font>"
+    "<img src=\" https://www.acumulariqueza.com/wp-content/uploads/2020/02/Diferencia-entre-inversi%C3%B3n-pasiva-e-inversi%C3%B3n-activa-800x1024.jpg \" width=\"600px\" height=\"200px\" >\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <font color= #blue> <font size = 6> 2. Objetivos </font>"
    ]
   },
   {
@@ -188,20 +204,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "<br>"
+    "- Identificar que estrategia es la adecuada según las necesidades y gustos del inversor teniendo en cuenta los factores riesgo, retorno y costo para un periodo de corto o largo plazo.  \n",
+    "- Crear un algoritmo que tenga la función de replicar el comportamiento de cualquier índice bursátil en un tiempo establecido de tiempo o por otro lado, un algoritmo que permita la diversificación de los activos a invertir de manera que se pueda minimizar el riesgo y maximizar los rendimientos sin importar el perfil del inversionista."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color= #6B6B6B> <font size = 6> 3. Datos </font>"
+    "# <font color= #blue> <font size = 6> 3. Datos </font>"
    ]
   },
   {
@@ -237,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color= #6B6B6B> <font size = 6> 4. Procesos </font>"
+    "# <font color= #Blue> <font size = 6> 4. Procesos </font>"
    ]
   },
   {
@@ -274,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color= #6B6B6B> <font size = 6> 5. Conclusiones </font>"
+    "# <font color= #Blue> <font size = 6> 5. Conclusiones </font>"
    ]
   },
   {
@@ -316,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
